# turbodesigner

./: .gitignore  .gitmodules  .gitpod.yml  .pylintrc  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-publish.yml  tests.yml
examples/: airfoil.ipynb  attachment.ipynb  blade.ipynb  cad.ipynb  design copy.ipynb  design.ipynb
tests/: cli_commands_test.py  cli_state_test.py  compressor_blade_test.py  compressor_design_test.py  compressor_deviation_test.py  compressor_flow_station_test.py  compressor_stage_test.py  compressor_turbomachinery_test.py  compressor_velocity_triangle_test.py  compressor_vortex_test.py  dca_airfoil_test.py  designs.py  exporter_test.py  turbomachinery_extended_test.py
tests/designs/: base_design.json  mark1.json
turbodesigner/: __init__.py  blade.py  exporter.py  flow_station.py  report.py  stage.py  turbomachinery.py  units.py  visualizer.py
turbodesigner/airfoils/: DCA.py  __init__.py  common.py
turbodesigner/attachments/: __init__.py  firetree.py
turbodesigner/blade/: __init__.py  deviation.py  metal_angles.py  row.py
turbodesigner/blade/deviation/: johnson.py
turbodesigner/blade/metal_angle_methods/: __init__.py  johnsen_bullock.py
turbodesigner/blade/vortex/: __init__.py  common.py  free_vortex.py
turbodesigner/cad/: __init__.py  blade.py  bom.py  cache.py  casing.py  common.py  compressor.py  shaft.py
turbodesigner/cli/: __init__.py  analyze.py  cad.py  design.py  state.py  utils.py
turbodesigner/examples/: airfoil.ipynb  attachment.ipynb
